upload button alignment fixed

--- a/client/src/app/components/gallery-upload/gallery-upload.component.css
+++ b/client/src/app/components/gallery-upload/gallery-upload.component.css
@@ -54,6 +54,8 @@ app-gallery-card {
 }
 
 .plus {
+  /* width: 100%; */
+  left: calc(50vw - 24px);
   margin-top: 20vh;
 }
 
